--- a/index.css
+++ b/index.css
@@ -10,8 +10,50 @@ html , body {
 	border:solid 1px #333;
 	height : 600px;
 	margin: auto;
-	left:0; right:0; top:0; bottom:0;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
 	position: absolute;
 	width : 800px;
 	z-index:100;
+	visibility: hidden;
+}
+
+#startMenu {
+	height : 600px;
+	margin: auto;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
+	position: absolute;
+	width : 800px;
+	z-index:100;
+}
+
+#levelMenu {
+	height : 600px;
+	margin: auto;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
+	position: absolute;
+	width : 800px;
+	z-index:100;
+	visibility: hidden;
+}
+
+#endGameMenu {
+	height : 600px;
+	margin: auto;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
+	position: absolute;
+	width : 800px;
+	z-index:100;
+	visibility: hidden;
 }
