--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html , body {
-	background: #212121; 
+	background: #000000; 
 	color: #fff; 
 	font-family: Helvetica;
 	margin: 0; 
@@ -7,7 +7,6 @@ html , body {
 }
 
 #container {
-	border:solid 1px #333;
 	height : 600px;
 	margin: auto;
 	left:0;
@@ -61,3 +60,17 @@ html , body {
 #sound {
 	visibility: hidden;
 }
+
+#waitingScreen {
+	height : 600px;
+	margin: auto;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
+	position: absolute;
+	width : 800px;
+	z-index:100;
+	visibility: hidden;
+}
+
